--- a/perwita/.env
+++ b/perwita/.env
@@ -9,7 +9,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=jpm
 DB_USERNAME=postgres
-DB_PASSWORD=dewa17a
+DB_PASSWORD=123456
 
 
 DB_CONNECTION=mysql
