--- a/perwita/.env
+++ b/perwita/.env
@@ -3,6 +3,7 @@ APP_DEBUG=true
 APP_KEY=base64:I2QuHAx4CT0mtociOTEsJPVBD/GSnSMql9ssh3vji9A=
 APP_URL=http://localhost
 
+// deny sianak alam
 
 DB_CONNECTION=pgsql
 DB_HOST=localhost
