--- a/perwita/.env
+++ b/perwita/.env
@@ -6,11 +6,12 @@ APP_URL=http://localhost
 // deny sianak alam
 
 DB_CONNECTION=pgsql
-DB_HOST=control.capella.idgx.net
+DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=u12001zrd_jpm
-DB_USERNAME=u12001zrd_jpm
-DB_PASSWORD=AlamrayaSebarBarok4h
+DB_DATABASE=jpm
+DB_USERNAME=dewa17a
+DB_PASSWORD=123456
+
 
 
 DB_CONNECTION=mysql
