--- a/perwita/composer.json
+++ b/perwita/composer.json
@@ -27,7 +27,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            ["app/Helpers/app_helper.php"]
+        ]
     },
     "autoload-dev": {
         "classmap": [
