--- a/perwita/composer.json
+++ b/perwita/composer.json
@@ -13,7 +13,8 @@
         "crabbly/fpdf-laravel": "^1.0",
         "anouar/fpdf": "^1.0",
         "barryvdh/laravel-debugbar": "^2.4",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
