--- a/perwita/composer.json
+++ b/perwita/composer.json
@@ -15,7 +15,9 @@
         "barryvdh/laravel-debugbar": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
-        "spatie/laravel-backup": "^3.0.0"
+        "spatie/laravel-backup": "^3.0.0",
+        "backpack/base": "0.6.x",
+        "paulvl/backup": "3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
