--- a/perwita/composer.json
+++ b/perwita/composer.json
@@ -17,7 +17,8 @@
         "intervention/image": "^2.4",
         "spatie/laravel-backup": "^3.0.0",
         "backpack/base": "0.6.x",
-        "paulvl/backup": "3.*"
+        "paulvl/backup": "3.*",
+        "backup-manager/laravel": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
